# scaleworm-student-lab

./: .gitignore  README.md  environment.yml  labels.txt  pyproject.toml
literature/: README.md
notebooks/: 20_student_scaleworm_pipeline.ipynb  21_cross_student_comparison.ipynb  22_verify_detections.ipynb  22_verify_detections_annotated.ipynb  22_verify_detections_methods.md  build_annotated_notebook.py  make_session_summary_pdf.py  session_summary_22_verify_detections.md
scripts/: build_student_notebook.py
specs/rubrics/: map-evaluation-rubric.md  timeseries-evaluation-rubric.md
